# django-itelegram

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  requirements-test.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
SampleProject/: manage.py
SampleProject/SampleProject/: asgi.py  bot_settings.py  settings.py  urls.py  wsgi.py
SampleProject/bot/: apps.py  telegrambot.py
SampleProject/bot/handlers/: start.py
django_itelegram/: __init__.py  admin.py  apps.py  bot.py  decorators.py  models.py  mqbot.py  services.py  urls.py  views.py
django_itelegram/management/commands/: botpolling.py
django_itelegram/migrations/: 0001_initial.py
docs/source/: conf.py  index.rst
itelegram/: __init__.py  admin.py  apps.py  bot.py  decorators.py  defaults.py  managers.py  models.py  mqbot.py  services.py  urls.py  views.py
itelegram/management/commands/: botpolling.py
itelegram/migrations/: 0001_initial.py  0002_auto_20201114_1955.py
itelegram/templates/django_itelegram/: index.html
itelegram/templates/itelegram/: index.html
