[metadata]
name = django-itelegram
version = 1.2.3
description = It's a library for building Telegram bot on Django with extra built-in features
long_description = file: README.rst
url = https://github.com/YazdanRa/django-itelegram
author = Yazdan Ranjbar
author_email = yazdan_ra@icloud.com
license = MIT
classifiers =
    Environment :: Web Environment
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
